--- a/pages/components/avatar/avatar.html
+++ b/pages/components/avatar/avatar.html
@@ -60,29 +60,29 @@
       <span>
         <pre><b>av_xxl:</b> 14rem</pre>
         <pre><b>av_xl:</b> 12rem</pre>
-        <pre><b>av_l:</b> 10rem</pre>
-        <pre><b>av_m:</b> 8rem</pre>
-        <pre><b>av_s:</b> 6rem</pre>
+        <pre><b>av_lg:</b> 10rem</pre>
+        <pre><b>av_md:</b> 8rem</pre>
+        <pre><b>av_sm:</b> 6rem</pre>
         <pre><b>av_xs:</b> 4rem</pre>
       </span>
       <div class="sui_avatar_wrapper">
         <div class="sui_avatar av_xxl">
-          <img src="/assets/avatars/av1.svg" alt="" />
+          <img src="/assets/avatars/av1.svg" alt="demo avatar" />
         </div>
         <div class="sui_avatar av_xl">
-          <img src="/assets/avatars/av2.svg" alt="" />
+          <img src="/assets/avatars/av2.svg" alt="demo avatar" />
         </div>
-        <div class="sui_avatar av_l">
-          <img src="/assets/avatars/av3.svg" alt="" />
+        <div class="sui_avatar av_lg">
+          <img src="/assets/avatars/av3.svg" alt="demo avatar" />
         </div>
-        <div class="sui_avatar av_m">
-          <img src="/assets/avatars/av1.svg" alt="" />
+        <div class="sui_avatar av_md">
+          <img src="/assets/avatars/av1.svg" alt="demo avatar" />
         </div>
-        <div class="sui_avatar av_s">
-          <img src="/assets/avatars/av2.svg" alt="" />
+        <div class="sui_avatar av_sm">
+          <img src="/assets/avatars/av2.svg" alt="demo avatar" />
         </div>
         <div class="sui_avatar av_xs">
-          <img src="/assets/avatars/av3.svg" alt="" />
+          <img src="/assets/avatars/av3.svg" alt="demo avatar" />
         </div>
       </div>
 
@@ -108,29 +108,29 @@
       <span>
         <pre><b>av_xxl:</b> 14rem</pre>
         <pre><b>av_xl:</b> 12rem</pre>
-        <pre><b>av_l:</b> 10rem</pre>
-        <pre><b>av_m:</b> 8rem</pre>
-        <pre><b>av_s:</b> 6rem</pre>
+        <pre><b>av_lg:</b> 10rem</pre>
+        <pre><b>av_md:</b> 8rem</pre>
+        <pre><b>av_sm:</b> 6rem</pre>
         <pre><b>av_xs:</b> 4rem</pre>
       </span>
       <div class="sui_avatar_wrapper">
         <div class="sui_avatar av_xxl av_square">
-          <img src="/assets/avatars/av1.svg" alt="" />
+          <img src="/assets/avatars/av1.svg" alt="demo avatar" />
         </div>
         <div class="sui_avatar av_xl av_square">
-          <img src="/assets/avatars/av2.svg" alt="" />
+          <img src="/assets/avatars/av2.svg" alt="demo avatar" />
         </div>
-        <div class="sui_avatar av_l av_square">
-          <img src="/assets/avatars/av3.svg" alt="" />
+        <div class="sui_avatar av_lg av_square">
+          <img src="/assets/avatars/av3.svg" alt="demo avatar" />
         </div>
-        <div class="sui_avatar av_m av_square">
-          <img src="/assets/avatars/av1.svg" alt="" />
+        <div class="sui_avatar av_md av_square">
+          <img src="/assets/avatars/av1.svg" alt="demo avatar" />
         </div>
-        <div class="sui_avatar av_s av_square">
-          <img src="/assets/avatars/av2.svg" alt="" />
+        <div class="sui_avatar av_sm av_square">
+          <img src="/assets/avatars/av2.svg" alt="demo avatar" />
         </div>
         <div class="sui_avatar av_xs av_square">
-          <img src="/assets/avatars/av3.svg" alt="" />
+          <img src="/assets/avatars/av3.svg" alt="demo avatar" />
         </div>
       </div>
 
@@ -163,7 +163,7 @@
         <div class="sui_avatar av_xl av_txt av_square sui_v2">
           <h2>AL</h2>
         </div>
-        <div class="sui_avatar av_l av_txt sui_v3">
+        <div class="sui_avatar av_lg av_txt sui_v3">
           <h2>SG</h2>
         </div>
       </div>
