--- a/pages/components/badge/badge.css
+++ b/pages/components/badge/badge.css
@@ -47,15 +47,15 @@
   width: 3.5rem;
   height: 3.5rem;
 }
-.bd_l {
+.bd_lg {
   width: 3rem;
   height: 3rem;
 }
-.bd_m {
+.bd_md {
   width: 2.5rem;
   height: 2.5rem;
 }
-.bd_s {
+.bd_sm {
   width: 2rem;
   height: 2rem;
 }
