--- a/pages/components/badge/badge.html
+++ b/pages/components/badge/badge.html
@@ -65,30 +65,30 @@
       <span>
         <pre><b>bd_left:</b> left position</pre>
         <pre><b>bd_xl:</b> 3.5rem</pre>
-        <pre><b>bd_l:</b> 3rem</pre>
-        <pre><b>bd_m:</b> 2.5rem</pre>
-        <pre><b>bd_s:</b> 2rem</pre>
+        <pre><b>bd_lg:</b> 3rem</pre>
+        <pre><b>bd_md:</b> 2.5rem</pre>
+        <pre><b>bd_sm:</b> 2rem</pre>
       </span>
       <div class="sui_avatar_wrapper">
         <div class="sui_avatar av_xl av_txt">
-          <img src="/assets/avatars/av1.svg" alt="" />
+          <img src="/assets/avatars/av1.svg" alt="demo avatar" />
           <i class="av_badge bd_left bd_xl bd_red"></i>
         </div>
         <div class="sui_avatar av_xl">
-          <img src="/assets/avatars/av2.svg" alt="" />
+          <img src="/assets/avatars/av2.svg" alt="demo avatar" />
           <i class="av_badge bd_xl bd_green"></i>
         </div>
-        <div class="sui_avatar av_l">
-          <img src="/assets/avatars/av3.svg" alt="" />
-          <i class="av_badge bd_l bd_gray"></i>
+        <div class="sui_avatar av_lg">
+          <img src="/assets/avatars/av3.svg" alt="demo avatar" />
+          <i class="av_badge bd_lg bd_gray"></i>
         </div>
-        <div class="sui_avatar av_m">
-          <img src="/assets/avatars/av1.svg" alt="" />
-          <i class="av_badge bd_m bd_red"></i>
+        <div class="sui_avatar av_md">
+          <img src="/assets/avatars/av1.svg" alt="demo avatar" />
+          <i class="av_badge bd_md bd_red"></i>
         </div>
-        <div class="sui_avatar av_s">
-          <img src="/assets/avatars/av2.svg" alt="" />
-          <i class="av_badge bd_s bd_green"></i>
+        <div class="sui_avatar av_sm">
+          <img src="/assets/avatars/av2.svg" alt="demo avatar" />
+          <i class="av_badge bd_sm bd_green"></i>
         </div>
         <div class="sui_avatar">
           <i class="fas fa-shopping-cart"></i>
@@ -123,24 +123,24 @@
       </p>
       <div class="sui_avatar_wrapper">
         <div class="sui_avatar av_xl av_square">
-          <img src="/assets/avatars/av1.svg" alt="" />
+          <img src="/assets/avatars/av1.svg" alt="demo avatar" />
           <i class="av_badge bd_left bd_xl bd_red"></i>
         </div>
         <div class="sui_avatar av_xl av_square">
-          <img src="/assets/avatars/av2.svg" alt="" />
+          <img src="/assets/avatars/av2.svg" alt="demo avatar" />
           <i class="av_badge bd_xl bd_green"></i>
         </div>
-        <div class="sui_avatar av_l av_square">
-          <img src="/assets/avatars/av3.svg" alt="" />
-          <i class="av_badge bd_l bd_gray"></i>
+        <div class="sui_avatar av_lg av_square">
+          <img src="/assets/avatars/av3.svg" alt="demo avatar" />
+          <i class="av_badge bd_lg bd_gray"></i>
         </div>
-        <div class="sui_avatar av_m av_square">
-          <img src="/assets/avatars/av1.svg" alt="" />
-          <i class="av_badge bd_m bd_red"></i>
+        <div class="sui_avatar av_md av_square">
+          <img src="/assets/avatars/av1.svg" alt="demo avatar" />
+          <i class="av_badge bd_md bd_red"></i>
         </div>
-        <div class="sui_avatar av_s av_square">
-          <img src="/assets/avatars/av2.svg" alt="" />
-          <i class="av_badge bd_s bd_green"></i>
+        <div class="sui_avatar av_sm av_square">
+          <img src="/assets/avatars/av2.svg" alt="demo avatar" />
+          <i class="av_badge bd_sm bd_green"></i>
         </div>
       </div>
 
@@ -152,10 +152,10 @@
             <i class="av_badge bd_left bd_xl bd_red"></i>
           </div>
 
-          <div class="sui_avatar av_l av_square">
+          <div class="sui_avatar av_lg av_square">
             <img src=".." alt=".." />
             <!-- L size | Gray color -->
-            <i class="av_badge bd_l bd_gray"></i>
+            <i class="av_badge bd_lg bd_gray"></i>
           </div>
         </script>
       </div>
