--- a/pages/components/button/button.html
+++ b/pages/components/button/button.html
@@ -222,7 +222,7 @@
           <i class="btn_icon fas fa-shopping-cart"></i>
           Add to Cart
         </button>
-        <button class="sui_btn_float">
+        <button class="sui_btn_float_fixed float_fixed_bottom_right">
           <i class="fas fa-comments"></i>
         </button>
       </div>
@@ -264,7 +264,7 @@
             Add to Cart
           </button>
 
-          <button class="sui_btn_float">
+          <button class="sui_btn_float_fixed float_fixed_bottom_right">
             <i class="fas fa-comments"></i>
           </button>
         </script>
