--- a/pages/components/card/card.html
+++ b/pages/components/card/card.html
@@ -73,12 +73,12 @@
         <div class="sui_card">
           <div class="card_img_wrapper">
             <span class="card_overlay">New</span>
-            <button class="sui_btn_flpos">
+            <button class="sui_btn_float float_top_right">
               <i class="far fa-heart"></i>
             </button>
             <img
               src="https://ih1.redbubble.net/image.723788174.3155/ssrco,classic_tee,womens,9ec0d5:0d26d5c715,front_alt,tall_three_quarter,750x1000.jpg"
-              alt=""
+              alt="t-shirt"
             />
           </div>
           <div class="card_content_wrapper">
@@ -110,12 +110,12 @@
         <div class="sui_card card_badge">
           <div class="card_img_wrapper">
             <span class="card_overlay">New</span>
-            <button class="sui_btn_flpos">
+            <button class="sui_btn_float float_top_right">
               <i class="far fa-heart"></i>
             </button>
             <img
               src="https://ih1.redbubble.net/image.647394694.7571/ssrco,classic_tee,mens,541e68:68f9e309b0,front_alt,tall_portrait,750x1000.u4.jpg"
-              alt=""
+              alt="t-shirt"
             />
           </div>
           <div class="card_content_wrapper">
@@ -153,7 +153,7 @@
           <div class="sui_card">
             <div class="card_img_wrapper">
               <span class="card_overlay">New</span>
-              <button class="sui_btn_flpos">
+              <button class="sui_btn_float float_top_right">
                 <i class="far fa-heart"></i>
               </button>
               <img src=".." alt=".." />
@@ -189,12 +189,12 @@
         <div class="sui_card card_list">
           <div class="card_img_wrapper">
             <span class="card_overlay">New</span>
-            <button class="sui_btn_flpos">
+            <button class="sui_btn_float float_top_right">
               <i class="far fa-heart"></i>
             </button>
             <img
               src="https://ih1.redbubble.net/image.723788174.3155/ssrco,classic_tee,womens,9ec0d5:0d26d5c715,front_alt,tall_three_quarter,750x1000.jpg"
-              alt=""
+              alt="t-shirt"
             />
           </div>
           <div class="card_content_wrapper">
@@ -226,12 +226,12 @@
         <div class="sui_card card_list card_badge">
           <div class="card_img_wrapper">
             <span class="card_overlay">New</span>
-            <button class="sui_btn_flpos">
+            <button class="sui_btn_float float_top_right">
               <i class="far fa-heart"></i>
             </button>
             <img
               src="https://ih1.redbubble.net/image.647394694.7571/ssrco,classic_tee,mens,541e68:68f9e309b0,front_alt,tall_portrait,750x1000.u4.jpg"
-              alt=""
+              alt="t-shirt"
             />
           </div>
           <div class="card_content_wrapper">
@@ -282,21 +282,21 @@
       <div class="sui_card_wrapper">
         <div class="sui_card">
           <div class="card_content_wrapper">
-            <button class="sui_btn_flpos">
+            <button class="sui_btn_float float_top_right">
               <i class="fas fa-times"></i>
             </button>
             <div class="card_text_title_wrapper">
-              <h2 class="card_content_title">Violet-backed Starling</h2>
-              <h3>Feb 1 2022</h3>
+              <h5>Violet-backed Starling</h5>
+              <p class="card_text_date">Feb 1 2022</p>
             </div>
-            <div class="card_content_text">
+            <p class="card_content_text">
               The violet-backed starling is a common bird in Sub-Saharan Africa,
               occurring in most locations with the exception of the dense
               rainforest of the Congo Basin, and the more arid parts of
               southwestern Africa. It is found in open woodland, gallery
               forests, forest verges and clearings. In the Chyulu Hills of
               Kenya, it occurs at altitudes of up to 2,100 m.
-            </div>
+            </p>
             <div class="card_cta_text">
               <button class="sui_btn btn_v2">READ</button>
               <button class="sui_btn btn_v3">BOOKMARK</button>
@@ -307,12 +307,12 @@
         <div class="sui_card">
           <div class="card_img_wrapper">
             <span class="card_overlay">New</span>
-            <button class="sui_btn_flpos">
+            <button class="sui_btn_float float_top_right">
               <i class="fas fa-times"></i>
             </button>
             <img
               src="https://ih1.redbubble.net/image.647394694.7571/ssrco,classic_tee,mens,541e68:68f9e309b0,front_alt,tall_portrait,750x1000.u4.jpg"
-              alt=""
+              alt="t-shirt"
             />
           </div>
           <div class="card_content_wrapper">
@@ -348,14 +348,14 @@
         <script type="text/plain" class="line-numbers language-markup">
           <div class="sui_card">
             <div class="card_content_wrapper">
-              <button class="sui_btn_flpos">
+              <button class="sui_btn_float float_top_right">
                 <i class="fas fa-times"></i>
               </button>
               <div class="card_text_title_wrapper">
-                <h2 class="card_content_title">TITLE HERE</h2>
-                <h3>Feb 1 2022</h3>
+                <h5>TITLE HERE</h5>
+                <p class="card_text_date">DATE HERE</p>
               </div>
-              <div class="card_content_text">CONTENT HERE</div>
+              <p class="card_content_text">CONTENT HERE</p>
               <div class="card_cta_text">
                 <button class="sui_btn btn_v2">READ</button>
                 <button class="sui_btn btn_v3">BOOKMARK</button>
