--- a/pages/components/image/image.html
+++ b/pages/components/image/image.html
@@ -64,11 +64,11 @@
       </p>
       <div class="sui_img_wrapper">
         <div class="sui_img">
-          <img src="https://picsum.photos/600/400" alt="" />
+          <img src="https://picsum.photos/600/400" alt="random600x400" />
         </div>
 
         <div class="sui_img img_fit">
-          <img src="https://picsum.photos/600/400" alt="" />
+          <img src="https://picsum.photos/600/400" alt="random600x400" />
         </div>
       </div>
 
@@ -94,11 +94,11 @@
       </p>
       <div class="sui_img_wrapper">
         <div class="sui_img img_rnd">
-          <img src="https://picsum.photos/800/400" alt="" />
+          <img src="https://picsum.photos/800/400" alt="random800x400" />
         </div>
 
         <div class="sui_img img_rnd">
-          <img src="https://picsum.photos/400/400" alt="" />
+          <img src="https://picsum.photos/400/400" alt="random400x400" />
         </div>
       </div>
 
