--- a/pages/components/modal/modal.html
+++ b/pages/components/modal/modal.html
@@ -59,7 +59,7 @@
         is like a pop-up to gain user attention and confirm a CTA. Click on the
         button below to see it in action:
       </p>
-      <div class="sui_show_modal_btn_wrapper flex_rw">
+      <div class="sui_show_modal_btn_wrapper flex_row">
         <button id="sui-show-modal" class="sui_btn">Show Modal</button>
       </div>
       <div id="sui-modal" class="sui_modal_wrapper">
@@ -67,8 +67,10 @@
           <button class="btn_icon_fa">
             <i class="fas fa-times" id="sui-close-modal"></i>
           </button>
-          <div class="sui_modal_title h3 fw6">This is Modal Title</div>
-          <div class="sui_modal_text h5 fw5">
+          <div class="sui_modal_title h3 font_weight_600">
+            This is Modal Title
+          </div>
+          <div class="sui_modal_text h5 font_weight_500">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
             ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
@@ -86,8 +88,8 @@
               <button class="btn_icon_fa">
                 <i class="fas fa-times" id="sui-close-modal"></i>
               </button>
-              <div class="sui_modal_title h3 fw6">This is Modal Title</div>
-              <div class="sui_modal_text h5 fw5">Lorem ipsum..</div>
+              <div class="sui_modal_title h3 font_weight_600">This is Modal Title</div>
+              <div class="sui_modal_text h5 font_weight_500">Lorem ipsum..</div>
             </div>
           </div>
         </script>
