--- a/pages/components/navigation/navigation.css
+++ b/pages/components/navigation/navigation.css
@@ -23,7 +23,7 @@
 }
 .sui_logo_caption {
   font-size: 1rem;
-  color: var(--PRIMARY-M1);
+  color: var(--PRIMARY-LIGHT1);
 }
 .input_icon .fas {
   top: 1.2rem;
