--- a/pages/components/navigation/navigation.html
+++ b/pages/components/navigation/navigation.html
@@ -67,9 +67,9 @@
       </p>
       <div class="sui_nav_wrapper">
         <div class="sui_nav">
-          <div class="sui_logo_wrapper flex_rw">
-            <img class="sui_logo" src="/assets/starling.svg" alt="" />
-            <div class="flex_cl">
+          <div class="sui_logo_wrapper flex_row">
+            <img class="sui_logo" src="/assets/starling.svg" alt="logo" />
+            <div class="flex_column">
               <span class="sui_logo_text">Title</span>
               <span class="sui_logo_caption">Tagline here</span>
             </div>
@@ -85,7 +85,7 @@
               <i class="fas fa-search"></i>
             </div>
           </div>
-          <div class="sui_cta flex_rw">
+          <div class="sui_cta flex_row">
             <button class="btn_icon_fa">
               <div class="sui_avatar">
                 <i class="far fa-heart"></i>
@@ -106,9 +106,9 @@
         <script type="text/plain" class="line-numbers language-html">
           <div class="sui_nav">
             <!-- Logo & Title -->
-            <div class="sui_logo_wrapper flex_rw">
-              <img class="sui_logo" src="/assets/starling.svg" alt="" />
-              <div class="flex_cl">
+            <div class="sui_logo_wrapper flex_row">
+              <img class="sui_logo" src="/assets/starling.svg" alt="..." />
+              <div class="flex_column">
                 <span class="sui_logo_text">Title</span>
                 <span class="sui_logo_caption">Tagline here</span>
               </div>
@@ -125,7 +125,7 @@
               </div>
             </div>
             <!-- CTA -->
-            <div class="sui_cta flex_rw">
+            <div class="sui_cta flex_row">
               <!-- Favorites Button -->
               <button class="btn_icon_fa">
                 <div class="sui_avatar">
