--- a/pages/components/rating/rating.html
+++ b/pages/components/rating/rating.html
@@ -57,7 +57,7 @@
       <!-- Standard Rating START -->
       <h2 class="sui_doc_subtitle">Standard Rating</h2>
       <p class="sui_doc_p">has 4 different color variants:</p>
-      <div class="sui_rating_wrapper flex_rw flex_wp flex_g2">
+      <div class="sui_rating_wrapper flex_row flex_wrap flex_gap2">
         <div class="sui_rating">
           <i class="fas fa-star starred"></i>
           <i class="fas fa-star starred"></i>
