--- a/pages/components/card/card.css
+++ b/pages/components/card/card.css
@@ -75,7 +75,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  background: var(--PRIMARY-M3);
+  background: var(--PRIMARY-LIGHT3);
   border-radius: 0 0 5rem 5rem;
   color: var(--WHITE);
   font-weight: 400;
@@ -96,6 +96,9 @@
   padding: 5px 0;
   font-size: 1.2rem;
   text-align: justify;
+}
+.card_text_date {
+  font-weight: 500;
 }
 .card_cta {
   display: flex;
