--- a/pages/components/lists/lists.html
+++ b/pages/components/lists/lists.html
@@ -54,7 +54,7 @@
       <!-- Simple Lists START -->
       <h2 class="sui_doc_subtitle">Simple Lists</h2>
       <p class="sui_doc_p">have 4 different color variants:</p>
-      <div class="list_wrapper flex_rw flex_wp flex_g2">
+      <div class="list_wrapper flex_row flex_wrap flex_gap2">
         <ul class="sui_ul">
           <div class="sui_ul_title h4 sui_color_text_p">Categories</div>
           <li class="h5 sui_li_p">T-Shirts</li>
@@ -101,7 +101,7 @@
       <p class="sui_doc_p">
         are lists stacked on top of each other in notification format:
       </p>
-      <div class="list_wrapper flex_rw flex_wp flex_g2">
+      <div class="list_wrapper flex_row flex_wrap flex_gap2">
         <ul class="sui_ul sui_ul_stacked">
           <li class="h5 sui_li_stacked">This is Notification 1</li>
           <li class="h5 sui_li_stacked">This is Notification 2</li>
