--- a/pages/style.css
+++ b/pages/style.css
@@ -22,7 +22,7 @@ main h1 {
 }
 #rem_notice::after {
   content: "";
-  background: var(--PRIMARY-M3);
+  background: var(--PRIMARY-LIGHT3);
   position: absolute;
   top: -1rem;
   left: 0;
@@ -31,7 +31,7 @@ main h1 {
 }
 #rem_notice:hover::after {
   content: "eg: 6rem = 6 x root font-size = 6 x 10px = 60px";
-  background: var(--PRIMARY-M3);
+  background: var(--PRIMARY-LIGHT3);
   padding: 5px 1rem;
   border-radius: 5px;
   position: absolute;
@@ -50,23 +50,23 @@ main h1 {
   padding: 2rem 1rem;
 }
 .color_wrapper .color_primary_p5 {
-  background: var(--PRIMARY-P5);
+  background: var(--PRIMARY-DARK5);
   color: var(--WHITE);
 }
 .color_wrapper .color_primary_p4 {
-  background: var(--PRIMARY-P4);
+  background: var(--PRIMARY-DARK4);
   color: var(--WHITE);
 }
 .color_wrapper .color_primary_p3 {
-  background: var(--PRIMARY-P3);
+  background: var(--PRIMARY-DARK3);
   color: var(--WHITE);
 }
 .color_wrapper .color_primary_p2 {
-  background: var(--PRIMARY-P2);
+  background: var(--PRIMARY-DARK2);
   color: var(--WHITE);
 }
 .color_wrapper .color_primary_p1 {
-  background: var(--PRIMARY-P1);
+  background: var(--PRIMARY-DARK1);
   color: var(--WHITE);
 }
 .color_wrapper .color_primary_main {
@@ -74,29 +74,29 @@ main h1 {
   color: var(--WHITE);
 }
 .color_wrapper .color_primary_m1 {
-  background: var(--PRIMARY-M1);
+  background: var(--PRIMARY-LIGHT1);
   color: var(--WHITE);
 }
 .color_wrapper .color_primary_m2 {
-  background: var(--PRIMARY-M2);
+  background: var(--PRIMARY-LIGHT2);
   color: var(--WHITE);
 }
 .color_wrapper .color_primary_m3 {
-  background: var(--PRIMARY-M3);
+  background: var(--PRIMARY-LIGHT3);
   color: var(--WHITE);
 }
 .color_wrapper .color_primary_m4 {
-  background: var(--PRIMARY-M4);
+  background: var(--PRIMARY-LIGHT4);
 }
 .color_wrapper .color_primary_m5 {
-  background: var(--PRIMARY-M5);
+  background: var(--PRIMARY-LIGHT5);
 }
 .color_wrapper .color_v1_p2 {
-  background: var(--VARIANT-1-TXT-BG);
+  background: var(--VARIANT-1-DARK2);
   color: var(--WHITE);
 }
 .color_wrapper .color_v1_p1 {
-  background: var(--VARIANT-1P1);
+  background: var(--VARIANT-1-DARK1);
   color: var(--BLACK);
 }
 .color_wrapper .color_v1_main {
@@ -104,19 +104,19 @@ main h1 {
   color: var(--BLACK);
 }
 .color_wrapper .color_v1_m1 {
-  background: var(--VARIANT-1M1);
+  background: var(--VARIANT-1-LIGHT1);
   color: var(--BLACK);
 }
 .color_wrapper .color_v1_m2 {
-  background: var(--VARIANT-1BG);
+  background: var(--VARIANT-1-LIGHT2);
   color: var(--BLACK);
 }
 .color_wrapper .color_v2_p2 {
-  background: var(--VARIANT-2-TXT-BG);
+  background: var(--VARIANT-2-DARK2);
   color: var(--WHITE);
 }
 .color_wrapper .color_v2_p1 {
-  background: var(--VARIANT-2P1);
+  background: var(--VARIANT-2-DARK1);
   color: var(--BLACK);
 }
 .color_wrapper .color_v2_main {
@@ -124,19 +124,19 @@ main h1 {
   color: var(--BLACK);
 }
 .color_wrapper .color_v2_m1 {
-  background: var(--VARIANT-2M1);
+  background: var(--VARIANT-2-LIGHT1);
   color: var(--BLACK);
 }
 .color_wrapper .color_v2_m2 {
-  background: var(--VARIANT-2BG);
+  background: var(--VARIANT-2-LIGHT2);
   color: var(--BLACK);
 }
 .color_wrapper .color_v3_p2 {
-  background: var(--VARIANT-3-TXT-BG);
+  background: var(--VARIANT-3-DARK2);
   color: var(--WHITE);
 }
 .color_wrapper .color_v3_p1 {
-  background: var(--VARIANT-3P1);
+  background: var(--VARIANT-3-DARK1);
   color: var(--BLACK);
 }
 .color_wrapper .color_v3_main {
@@ -144,11 +144,11 @@ main h1 {
   color: var(--BLACK);
 }
 .color_wrapper .color_v3_m1 {
-  background: var(--VARIANT-3M1);
+  background: var(--VARIANT-3-LIGHT1);
   color: var(--BLACK);
 }
 .color_wrapper .color_v3_m2 {
-  background: var(--VARIANT-3BG);
+  background: var(--VARIANT-3-LIGHT2);
   color: var(--BLACK);
 }
 /** COLOR END **/
@@ -205,7 +205,7 @@ main h1 {
   color: var(--CODE-GREEN);
 }
 .code_wrapper .code-toolbar .language-markup {
-  color: var(--VARIANT-3P1);
+  color: var(--VARIANT-3-DARK1);
 }
 .code_wrapper .code-toolbar .token.tag {
   color: var(--CODE-BLUE);
@@ -218,7 +218,7 @@ main h1 {
 }
 .code_wrapper .toolbar .toolbar-item .copy-to-clipboard-button {
   color: var(--WHITE);
-  background: var(--PRIMARY-M3);
+  background: var(--PRIMARY-LIGHT3);
   padding: 5px 10px;
   margin-right: 10px;
 }
@@ -256,7 +256,7 @@ main pre {
   padding-right: 2rem;
 }
 pre b {
-  background: var(--PRIMARY-M3);
+  background: var(--PRIMARY-LIGHT3);
   color: var(--BG);
   border-radius: 5px;
   padding: 5px;
@@ -289,23 +289,23 @@ pre b {
   gap: 1rem;
   padding-top: 2rem;
 }
-.sui_btn_float::before {
+.sui_btn_float_fixed::before {
   color: var(--WHITE);
-  font-size: 2rem;
+  font-size: 1.4rem;
   content: "";
-  background: var(--PRIMARY-M3);
+  background: var(--PRIMARY-LIGHT3);
   border-radius: 5px;
   position: fixed;
-  bottom: 9rem;
-  right: 9rem;
+  bottom: 7rem;
+  right: 7rem;
   -webkit-transition: all ease 0.5s;
   transition: all ease 0.5s;
 }
-.sui_btn_float:hover::before {
+.sui_btn_float_fixed:hover::before {
   content: "I am a floating button";
   position: fixed;
-  bottom: 9rem;
-  right: 11rem;
+  bottom: 7rem;
+  right: 9rem;
   padding: 1rem 1.5rem;
 }
 .sui_card_wrapper {
@@ -342,7 +342,7 @@ pre b {
   border-radius: 5px;
   opacity: 0.7;
   background: var(--PRIMARY-BG);
-  box-shadow: 0 0 2px var(--BLACK-C);
+  box-shadow: 0 0 2px var(--BLACK-OPACITY-C);
 }
 .sui_img:nth-child(1)::before {
   content: "default";
@@ -451,7 +451,7 @@ pre b {
   margin-top: 1rem;
 }
 .sui_grid_wrapper .sui_grid div {
-  background: var(--WHITE-A);
+  background: var(--WHITE-OPACITY-A);
   padding: 1rem;
   border-radius: 4px;
   border: 1px solid var(--SHADE);
